--- a/Makefile.am
+++ b/Makefile.am
@@ -1,4 +1,4 @@
-warning_flags = -Wall -Wextra -Wno-unused-parameter -Wshadow
+warning_flags = -Wall -Wextra -Wshadow -Wno-unused-parameter
 common_cflags = -O3 -ffast-math $(MFLAGS) $(warning_flags)
 AM_CXXFLAGS = -std=c++14 $(common_cflags)
 
