Makefile: Add -fvisibility=hidden

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,5 +1,5 @@
 warning_flags = -Wall -Wextra -Wshadow -Wno-unused-parameter
-common_cflags = -O3 -ffast-math $(MFLAGS) $(warning_flags)
+common_cflags = -O3 -ffast-math -fvisibility=hidden $(warning_flags) $(MFLAGS)
 AM_CXXFLAGS = -std=c++14 $(common_cflags)
 
 AM_CPPFLAGS = $(VapourSynth_CFLAGS)
