--- a/configure.ac
+++ b/configure.ac
@@ -1,4 +1,4 @@
-AC_INIT([Deblock], [5], [https://github.com/HomeOfVapourSynthEvolution/VapourSynth-Deblock/issues], [Deblock], [https://github.com/HomeOfVapourSynthEvolution/VapourSynth-Deblock/])
+AC_INIT([Deblock], [6], [https://github.com/HomeOfVapourSynthEvolution/VapourSynth-Deblock/issues], [Deblock], [https://github.com/HomeOfVapourSynthEvolution/VapourSynth-Deblock/])
 
 : ${CXXFLAGS=""}
 
@@ -7,9 +7,9 @@ AM_SILENT_RULES([yes])
 
 LT_INIT([disable-static win32-dll])
 
-AC_PROG_CXX
-
 AC_CANONICAL_HOST
+
+AC_PROG_CXX
 
 
 X86="false"
@@ -17,7 +17,7 @@ X86="false"
 AS_CASE(
         [$host_cpu],
         [i?86], [BITS="32" X86="true"],
-        [x86_64], [BITS="64" X86="true"],
+        [x86_64], [BITS="64" X86="true"]
 )
 
 AS_CASE(
